<resources>
    <string name="app_name">ShTP</string>
    <string name="default_user_name">User Name</string>
    <string name="button_personal_github">GitHub Account</string>
    <string name="button_personal_telegram">Telegram Account</string>
    <string name="button_personal_stepik">Stepik Account</string>
    <string name="button_personal_kaggle">Kaggle Account</string>
    <string name="button_personal_link">Personal Site</string>
    <string name="default_user_values" translatable="false">N/A</string>
    <string name="user_score">Score</string>
    <string name="user_solved">Solved</string>
    <string name="user_position">Position</string>
    <string name="user_open_more">Open more</string>
    <string name="settings_button_description">Settings</string>
    <string name="logout_button_description">Logout</string>
    <string name="upcoming_event">Upcoming event</string>
    <string name="settings_header">Account Settings</string>
    <string name="save_button">Save</string>
    <string name="settings_profile_about_hint">About you</string>
    <string name="settings_auth_current_password">Current Password</string>
    <string name="settings_auth_new_password">New Password</string>
    <string name="settings_auth_password_retry">Retry Password</string>
    <string name="logo_description_github" translatable="false">GitHub</string>
    <string name="logo_description_telegram" translatable="false">Telegram</string>
    <string name="logo_description_stepik" translatable="false">Stepik</string>
    <string name="logo_description_kaggle" translatable="false">Kaggle</string>
    <string name="logo_description_personal">Personal website</string>
    <string name="personal_input_github">GitHub Username</string>
    <string name="personal_input_telegram">Telegram Nickname</string>
    <string name="personal_input_stepik">Stepik ID</string>
    <string name="personal_input_kaggle">Kaggle Nickname</string>
    <string name="personal_input_personal">Personal URL</string>
    <string name="achievements_header">Achievements</string>
    <string name="events_header">Events</string>
    <string name="notifications_header">Notifications</string>
    <string name="tasks_header">Tasks</string>
    <string name="settings_auth_header">Change password</string>
    <string name="settings_links_header">Social Links</string>
    <string name="settings_information_header">Basic information</string>
    <string name="home_open_profile">Profile</string>
    <string name="home_open_achievements">Achievements</string>
    <string name="home_open_tasks">Tasks</string>
    <string name="home_open_events">Events</string>
    <string name="home_open_notifications">Notifications</string>
    <string name="user_name" translatable="false">%1$s %2$s</string>
    <string name="login_field_email">Email</string>
    <string name="login_field_password">Password</string>
    <string name="login_field_login_button">Log in</string>
    <string name="login_field_incorrect_data">Incorrect email or password</string>
    <string name="no_internet">No access to the server</string>
    <string name="network_error">Unidentified network error</string>
    <string name="tech_stack">Tech Stack</string>
    <string name="profile">Profile</string>
    <string name="achievements">Achievements</string>
    <string name="tasks">Tasks</string>
    <string name="events">Events</string>
    <string name="notification">Notification</string>
    <string name="settings_tech_stack_hint">Tech stack</string>
    <string name="data_entered_incorrectly">Data entered incorrectly</string>
    <string name="hello">Hello!</string>
    <string name="received_from">Points received</string>
    <string name="type_of">Type of</string>
    <string name="received_at">Received at</string>
    <string name="data_expired">Session expired</string>
    <string name="avatar_close_image">Close image</string>
    <string name="avatar_image">User Avatar</string>
    <string name="avatar">Avatar</string>
    <string name="avatar_photo">Take photo</string>
    <string name="avatar_gallary">Upload from gallary</string>
    <string name="user_avatar_description">User avatar</string>
    <string name="full_user_avatar">Full User Avatar</string>
    <string name="add_button_text" translatable="false">+</string>
    <string name="dialog_title_quit">Do you really want to get out?</string>
    <string name="dialog_title_new_version">A new version is available</string>
    <string name="dialog_button_cancel">Cancel</string>
    <string name="dialog_button_quit">Logout</string>
    <string name="dialog_button_new_version">Download</string>
    <string name="dialog_description_new_version">Since the last check, a new version of the application %1$s has been released. Open download page?</string>
    <string name="dialog_description_quit" translatable="false" />
    <string name="admin_panel">Admin Panel</string>
    <string name="admin_panel_header">Admin Panel</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="admin_panel_notifications_type">Тип уведомления</string>
    <string name="admin_panel_notifications_groups">Целевая группа пользователей</string>
    <string name="admin_panel_notifications_text">Сообщение</string>
    <string name="admin_panel_notifications_button_send">Send</string>
    <string name="admin_panel_notifications_type_notification">Information</string>
    <string name="admin_panel_notifications_type_warning">Warning</string>
    <string name="dialog_title_notified">Success</string>
    <string name="dialog_description_notified">The notification successfully sended</string>
    <string name="dialog_button_notified">Quit</string>
    <string name="dialog_title_user_delete">Delete user?</string>
    <string name="dialog_description_user_delete" translatable="false" />
    <string name="dialog_button_user_delete">Delete</string>
    <string name="add_user">Add user</string>
    <string name="name">Name</string>
    <string name="family">Family</string>
    <string name="email" translatable="false">Email</string>
    <string name="password">Password</string>
    <string name="role">Role</string>
    <string name="learn_year">Class</string>
    <string name="user_group">User group</string>
    <string name="create_user">Create user</string>
    <string name="student">Student</string>
    <string name="teacher">Teacher</string>
    <string name="administrator">Administrator</string>
    <string name="groups">Groups</string>
    <string name="users">Users</string>
    <string name="achievements_admin_page">Achievements</string>
    <string name="tasks_admin_page">Tasks</string>
    <string name="notifications_admin_page">Notifications</string>
    <string name="system_admin_page">System</string>
    <string name="create_group">Create group</string>
    <string name="a2">Free spaces: %1$d/%2$d</string>
    <string name="a3">Date: %1$s %2$s</string>
    <string name="a4">Duration: %1$dh %2$dm</string>
    <string name="description">Description</string>
    <string name="title">Title</string>
    <string name="send_achievement">Send achievement</string>
    <string name="dialog_title_achievement">Success</string>
    <string name="dialog_button_achievement">OK</string>
    <string name="dialog_description_achievement">Your achievement has been successfully submitted for moderation. As soon as it is reviewed, you will receive a notification.</string>
    <string name="dialog_title_group_delete">Delete group?</string>
    <string name="dialog_description_group_delete" translatable="false" />
    <string name="dialog_button_group_delete">Delete</string>
    <string name="events_not_available">No events available right now</string>
    <string name="achievements_not_available" >You haven\'t added any achievements</string>
    <string name="user_role_student">Student</string>
    <string name="user_role_teacher">Teacher</string>
    <string name="user_role_administrator">Administrator</string>
</resources>