<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/profile"
        android:icon="@drawable/panel_user"
        android:title="@string/profile" />
    <item
        android:id="@+id/achievements"
        android:icon="@drawable/panel_star"
        android:title="@string/achievements" />
<!--    <item-->
<!--        android:id="@+id/tasks"-->
<!--        android:icon="@drawable/panel_code"-->
<!--        android:title="@string/tasks" />-->
<!--    <item-->
<!--        android:id="@+id/events"-->
<!--        android:icon="@drawable/panel_calendar"-->
<!--        android:title="@string/events" />-->
    <item
        android:id="@+id/notification"
        android:icon="@drawable/panel_bell"
        android:title="@string/notification" />
</menu>