<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".ui.admin.AdminFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background">

        <TextView
            android:id="@+id/header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:fontFamily="@font/montserrat_bold"
            android:gravity="center"
            android:text="@string/admin_panel_header"
            android:textColor="@android:color/white"
            android:textSize="34sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.flexbox.FlexboxLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="38dp"
            android:layout_marginEnd="30dp"
            app:dividerDrawable="@drawable/divider_10"
            app:flexDirection="column"
            app:justifyContent="space_between"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/header"
            app:showDivider="middle">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/admin_panel_button_groups"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_bold"
                android:gravity="center"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:text="@string/groups"
                android:textColor="@android:color/white"
                android:textSize="12sp"
                android:theme="@style/Widget.Material3.Button"
                app:cornerRadius="100dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/admin_panel_button_users"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_bold"
                android:gravity="center"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:text="@string/users"
                android:textColor="@android:color/white"
                android:textSize="12sp"
                android:theme="@style/Widget.Material3.Button"
                app:cornerRadius="100dp" />

<!--            <com.google.android.material.button.MaterialButton-->
<!--                android:id="@+id/admin_panel_button_achievements"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:fontFamily="@font/montserrat_bold"-->
<!--                android:gravity="center"-->
<!--                android:insetTop="0dp"-->
<!--                android:insetBottom="0dp"-->
<!--                android:text="@string/achievements_admin_page"-->
<!--                android:textColor="@android:color/white"-->
<!--                android:textSize="12sp"-->
<!--                android:theme="@style/Widget.Material3.Button"-->
<!--                app:cornerRadius="100dp" />-->

<!--            <com.google.android.material.button.MaterialButton-->
<!--                android:id="@+id/admin_panel_button_tasks"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:fontFamily="@font/montserrat_bold"-->
<!--                android:gravity="center"-->
<!--                android:insetTop="0dp"-->
<!--                android:insetBottom="0dp"-->
<!--                android:text="@string/tasks_admin_page"-->
<!--                android:textColor="@android:color/white"-->
<!--                android:textSize="12sp"-->
<!--                android:theme="@style/Widget.Material3.Button"-->
<!--                app:cornerRadius="100dp" />-->

            <com.google.android.material.button.MaterialButton
                android:id="@+id/admin_panel_button_notifications"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_bold"
                android:gravity="center"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:text="@string/notifications_admin_page"
                android:textColor="@android:color/white"
                android:textSize="12sp"
                android:theme="@style/Widget.Material3.Button"
                app:cornerRadius="100dp" />

<!--            <com.google.android.material.button.MaterialButton-->
<!--                android:id="@+id/admin_panel_button_system"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:fontFamily="@font/montserrat_bold"-->
<!--                android:gravity="center"-->
<!--                android:insetTop="0dp"-->
<!--                android:insetBottom="0dp"-->
<!--                android:text="@string/system_admin_page"-->
<!--                android:textColor="@android:color/white"-->
<!--                android:textSize="12sp"-->
<!--                android:theme="@style/Widget.Material3.Button"-->
<!--                app:cornerRadius="100dp" />-->


        </com.google.android.flexbox.FlexboxLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
